--- a/_includes/projects_header.html
+++ b/_includes/projects_header.html
@@ -1,8 +1,6 @@
 <div class="container">
   {% include header-h1.html %}
-<!--
-  <h4 class="page-description body-font gray mt1 regular">
-    Current project: I'm running a company called <a href="{{ site.atomic_squirrel_url }}?ref=ybrikman-projects-header" target="_blank">Atomic Squirrel</a>.
-  </h4>
--->
+  <h5 class="page-description body-font gray mt1 regular">
+    Current project: I'm working on some open source tools at <a href="{{ site.olt_url }}?ref=vipintm-projects-header" target="_blank">Once In Lifetime</a>.
+  </h5>
 </div>
