--- a/_includes/post-outline.html
+++ b/_includes/post-outline.html
@@ -6,7 +6,7 @@
       {% elsif include.post.thumbnail %}
         {% include image.html path=include.post.thumbnail external=include.post.thumbnail alt=include.post.title %}
       {% else %}
-        <div class="border border-light-gray h1 py4 px4 center">Aa</div>
+        <div class="border border-light-gray h5 py4 px4 center">{{ include.post.title | truncatewords: 1 | truncate: 11 }}</div>
       {% endif %}
     </a>
   </div>
