Updated most projects and abot site page

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,12 +1,14 @@
 <div class="clearfix mxn2">
   <div class="col sm-col-9 px2">
     {% for section in site.data.about %}
+    {% if section[0] != 'about' %}
     <h3 class="mb2">{{ section[0] }}</h3>
       {% for bullet in section[1] %}
       	<p>
          {{ bullet }}
       	</p>
       {% endfor %}
+    {% endif %}
     {% endfor %}  
     <h3 class="mb2">Recent posts</h3>
     {% for post in site.posts limit:2 %}
