--- a/_includes/resume/project.html
+++ b/_includes/resume/project.html
@@ -1,4 +1,5 @@
 <div>
+   These are some of the projects which I was involved.
    <ul>
    {% for project in blurb %}
       <li><a href="/projects/#{{ project.id }}">{{ project.name }}</a></li>
