--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,7 +12,7 @@
     {% endfor %}  
     <h3 class="mb2">Recent posts</h3>
     {% for post in site.posts limit:2 %}
-      <a href="{{ post.url }}">{{ post.title }}</a><br>
+      <a href="{{ post.url }}">{{ post.title }}</a>  <small>{{ post.date | date:"%b %d, %Y" }}</small><br>
     {% endfor %}
   </div>
   <div class="col sm-col-3 px2">
