--- a/_includes/post-metadata.html
+++ b/_includes/post-metadata.html
@@ -14,7 +14,10 @@
       {% else %}
         {% assign tag_url_base = "/writing/tags/" %}
       {% endif %}        
+<!-- TODO - need to find a better way
       <a href="{{ tag_url_base }}#{{ tag | uri_escape }}">{{ tag }}</a>{% unless forloop.last %},{% endunless %}
+-->
+      <a href="{{ tag_url_base }}#{{ tag }}">{{ tag }}</a>{% unless forloop.last %},{% endunless %}
       {% endfor %}
     </span>
   {% endif %}  
