Updating publication format

--- a/_includes/resume/publications.html
+++ b/_includes/resume/publications.html
@@ -1,10 +1,43 @@
 {% for section_hash in blurb %}
+  <h5>{{ section_hash[0] }}</h5>
+  <ul>
   {% for section in section_hash %}
-    <h5>{{ section[0] }}</h5>
-    <ul>
-      {% for bullet in section[1] %}
-        <li>{{ bullet | markdownify }}</li>
-      {% endfor %}
-    </ul>
+    {% for pubtext in section %}
+	{% if pubtext.title != null %}
+	    <li><a id="{{ pubtext.id }}"></a><h5>{{ pubtext.title }}</h5>
+	    {% if pubtext.author != null %}
+                <i>{{ pubtext.author }}</i>,
+            {% endif %}
+            {% if pubtext.conference != null %}
+                "{{ pubtext.conference }}",
+            {% endif %}
+            {% if pubtext.degree != null %}
+                <b>{{ pubtext.degree }}</b> at
+            {% endif %}
+            {% if pubtext.organization != null %}
+                {{ pubtext.organization }},
+            {% endif %}
+            {% if pubtext.year != null %}
+                {{ pubtext.year }},
+            {% endif %}
+            {% if pubtext.pages != null %}
+                page {{ pubtext.pages }},
+            {% endif %}
+            {% if pubtext.url != null %}
+                [<a href="{{ pubtext.url }}">Publication</a>]
+            {% endif %}
+            {% if pubtext.pdf != null %}
+                [<a href="{{ pubtext.pdf }}">PDF</a>]
+            {% endif %}
+            {% if pubtext.presentation != null %}
+                [<a href="{{ pubtext.presentation }}">Presentation</a>]
+            {% endif %}
+	    {% if pubtext.abstract != null %}
+		<p><i>Abstract</i> :{{ pubtext.abstract }}</p>
+            {% endif %}
+            </li>
+        {% endif %}
+    {% endfor %}
   {% endfor %}
+  </ul>
 {% endfor %}
