--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,10 +5,10 @@
   <div class="sm-col px2">
     Page generated at {{ site.time | date: "%a, %d %b %Y %H:%M:%S %z" }}
   </div>
-  <div class="sm-col px2">
-    <a href="{{ site.about }}">About</a>
-  </div>
   <div class="sm-col-right px2">
+    <a href="{{ site.about }}" class="gray hint--top" data-hint="About this site">
+        <i class="fa fa-fw fa-lg fa-info-circle"></i>
+    </a> | 
     {% for external_url_hash in site.contact_urls %}
       {% assign external_url = external_url_hash[1] %}
       <a href="{{ external_url.url }}" target="_blank" class="gray hint--top" data-hint="{{ external_url.label }}">
