--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,7 +5,13 @@
   <ul class="right list-reset m0 nav-collapse">
     {% for nav_item in site.nav.main %}
       <li class="inline-block m0">
-        <a href="{{ nav_item[1] }}" class="button button-transparent py2 h6 nav-button caps{% if page.nav_item == nav_item[0] %} link-color{% endif %}">{{ nav_item[0] }}</a>
+        {% if nav_item[0] != 'home' %}
+	    <a href="{{ nav_item[1] }}" class="button button-transparent py2 h6 nav-button caps{% if page.nav_item == nav_item[0] %} link-color{% endif %}">{{ nav_item[0] }}</a>
+	{% else %}
+            {% if page.nav_item != 'home' %}
+                <a href="{{ nav_item[1] }}" class="button button-transparent py2 h6 nav-button caps{% if page.nav_item == nav_item[0] %} link-color{% endif %}"><i class="fa fa-border fa-home"></i></a>
+            {% endif %}
+        {% endif %}
       </li>
     {% endfor %}
   </ul>
