--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,9 @@
     Page generated at {{ site.time | date: "%a, %d %b %Y %H:%M:%S %z" }}
   </div>
   <div class="sm-col-right px2">
+    <a href="{{ site.cms }}" class="gray hint--top" data-hint="Post from web">
+        <i class="fa fa-fw fa-lg fa-pencil-square"></i>
+    </a>
     <a href="{{ site.about }}" class="gray hint--top" data-hint="About this site">
         <i class="fa fa-fw fa-lg fa-info-circle"></i>
     </a> | 
