--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,6 @@
 <!--
 <link rel="apple-touch-icon" href="apple-touch-icon.png">
 -->
-<link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.url }}{{ site.nav.writing.rss }}">
+<link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.url }}/{{ site.feed }}">
 {% include favicon.html %}
 {% include styles.html %}
