--- a/_includes/share-meta.html
+++ b/_includes/share-meta.html
@@ -16,3 +16,16 @@
 <meta property="og:description" content="{{ description }}"/>
 <meta property="og:image" content="{{ image_url }}"/>
 
+<!--
+<PageMap>
+  <DataObject type="document">
+     <Attribute name="title">{{ page.title }}</Attribute>
+     <Attribute name="author">{{ site.name }}</Attribute>
+     <Attribute name="description">{{ description }}</Attribute>
+     <Attribute name="last_update">{{ site.time | date_to_xmlschema }}</Attribute>
+  </DataObject>
+  <DataObject type="thumbnail">
+     <Attribute name="src" value="{{ image_url }}" />
+  </DataObject>
+</PageMap>
+-->
