--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   {% include nav.html %}
+  <a id="top"></a>
   {% if page.include_header %}
     {% include header.html %}
   {% endif %}
