--- a/_includes/disqus-scripts.html
+++ b/_includes/disqus-scripts.html
@@ -1,3 +1,4 @@
+{% if site.production %}
 {% if page.include_comments %}
   <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES * * */
@@ -20,4 +21,5 @@
     })();
   </script>
   <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+{% endif %}
 {% endif %}
