--- a/_includes/disqus-scripts.html
+++ b/_includes/disqus-scripts.html
@@ -1,4 +1,4 @@
-{% if site.production == 'true' %}
+{% if site.production %}
 {% if page.include_comments %}
   <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES * * */
