--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -5,7 +5,25 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
 </script>
 <script type="text/javascript" src="/assets/js/main.js"></script>
 {% if site.production %}
-{% include disqus-scripts.html %}
+  <script type="text/javascript">
+    var disqus_shortname = 'vipintm';
+    var disqus_identifier = '{{ page.id }}';
+
+    (function() {
+      {% if page.include_comments.embed %}
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+      {% endif %}
+
+      {% if page.include_comments.count %}
+        var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true;
+        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+      {% endif %}
+    })();
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 <script type="text/javascript">
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
