--- a/_includes/post-metadata.html
+++ b/_includes/post-metadata.html
@@ -5,7 +5,7 @@
     <i class="fa fa-calendar"></i>
     <time datetime="{{ include.post.date | date:"%Y-%m-%d" }}">{{ include.post.date | date:"%b %d, %Y" }}</time>
   </span>
-  {% if include.post.tags.size > 0 %} 
+  {% if include.post.tags.size > 0 %}
     <span class="mr1 nowrap">
       <i class="fa fa-tags"></i>
       {% for tag in include.post.tags %}
@@ -13,7 +13,7 @@
         {% assign tag_url_base = "" %}
       {% else %}
         {% assign tag_url_base = "/writing/tags/" %}
-      {% endif %}        
+      {% endif %}
 <!-- TODO - need to find a better way
       <a href="{{ tag_url_base }}#{{ tag | uri_escape }}">{{ tag }}</a>{% unless forloop.last %},{% endunless %}
 -->
@@ -21,7 +21,7 @@
       {% endfor %}
     </span>
   {% endif %}  
-  {% if page.include_comments %}
+  {% if page.include_comments or layout.include_comments %}
     <span class="mr1 nowrap">
       <i class="fa fa-comments"></i>
       {% if page.id == include.post.id %}
