--- a/_includes/hartbets.html
+++ b/_includes/hartbets.html
@@ -1,8 +1,8 @@
 <script type="text/javascript">
 (function getHeartBeat(date,format) {
-var bdate = 20 
-var bmonth = 8 
-var byear = 1981 
+var bdate = 21 
+var bmonth = 9 
+var byear = 1980 
 var currentTime = new Date()
 var year = currentTime.getFullYear()
 var month = currentTime.getMonth() + 1
@@ -31,7 +31,7 @@ month = month - 1
 var hartbeets = ( (minutes * 70 ) + ( hour * 4200 ) + ( date * 100800 ) + ( month * 3024000 ) + ( myage * 36288000 ) )
 document.write("My heart finished more than ")
 document.write(hartbeets)
-document.write(" beatings from 20th August 1981.")
+document.write(" beatings from 80s.")
 })();
 </script>
 
